# doxyconfig

./: .gitignore  .sonarcloud.properties  CMakeLists.txt  Doxyfile  README.md  doxyconfig-Doxyfile  doxyconfig-header.html  doxyconfig-readthedocs-search.js  header.html  package-lock.json  package.json  readthedocs_build.sh  sonar-project.properties
.github/workflows/: ci.yml
docs/: source_code.md
